RESOLVED FIXED307887
Enhanced <select>: don't use native picker on iOS
https://bugs.webkit.org/show_bug.cgi?id=307887
Summary Enhanced <select>: don't use native picker on iOS
Tim Nguyen (:ntim)
Reported 2026-02-13 21:04:54 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-13 21:05:00 PST
Tim Nguyen (:ntim)
Comment 2 2026-02-13 21:38:08 PST
EWS
Comment 3 2026-02-16 13:35:53 PST
Committed 307663@main (d0d3d16a42b5): <https://commits.webkit.org/307663@main> Reviewed commits have been landed. Closing PR #58704 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.