Source/WebKit/Shared/FocusedElementInformation.h
@@ -101,6 +101,7 @@ struct FocusedElementInformation {
     bool isMultiSelect { false };
     bool isReadOnly {false };
     bool allowsUserScaling { false };
+    bool usesBaseAppearancePicker { false };
     bool allowsUserScalingIgnoringAlwaysScalable { false };
     bool insideFixedPosition { false };
     bool hasPlainText { false };
